# communicator

./: CMakeLists.txt  README.md  base_protocol.hpp  client.cpp  client.hpp  communicator.conf  config.h  daemon.cpp  log4cplus.conf  log4cplus.config  main.cpp  main_linux.cpp  main_win.cpp  mongodb_backend.cpp  mongodb_backend.hpp  protocol_base.cpp  protocol_base.hpp  server.cpp  server.hpp  settings.cpp  settings.hpp  store.cpp  store.hpp  utils.cpp  utils.hpp
backends/: CMakeLists.txt  base.cpp  base.hpp  factory.cpp  factory.hpp  mongodb.cpp  mongodb.hpp  oracle.cpp  oracle.hpp  rabbitmq.cpp  rabbitmq.hpp  store.cpp  store.hpp
cmake/: config.h.in
cmake/Modules/: FindLibConfig.cmake  FindLog4cplus.cmake  FindOracle.cmake  FindRabbitMQ.cmake
omnicomm/: CMakeLists.txt  info_package.cpp  info_package.hpp  message.pb.cc  message.pb.h  message.proto  protocol.cpp  protocol.hpp  transp.cpp  transp.hpp  transport_messages.hpp  utils.cpp  utils.hpp
test/: params.cpp
