CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(communicator)

MACRO(TODAY RESULT)
    IF (WIN32)
        EXECUTE_PROCESS(COMMAND "cmd" " /C date /T" OUTPUT_VARIABLE ${RESULT})
        STRING(REGEX REPLACE "(..)/(..)/(....).*" "\\1.\\2.\\3" ${RESULT} ${${RESULT}})
    ELSEIF(UNIX)
        EXECUTE_PROCESS(COMMAND "date" "+%d.%m.%Y %H:%M:%S" OUTPUT_VARIABLE ${RESULT})
        STRING(REGEX REPLACE "(..).(..).(....) (..):(..):(..).*" "\\1.\\2.\\3 \\4:\\5:\\6" ${RESULT} ${${RESULT}})
    ELSE (WIN32)
        MESSAGE(SEND_ERROR "date not implemented")
        SET(${RESULT} 000000)
    ENDIF (WIN32)
ENDMACRO(TODAY)

IF (NOT CMAKE_BUILD_TYPE)
    MESSAGE(STATUS "No build type selected, default to Release")
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(PATCH_VERSION 0)
TODAY(BUILD_DATE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)

INCLUDE(FindOracle)
INCLUDE(FindProtobuf)
INCLUDE(FindRabbitMQ)
INCLUDE(FindLog4cplus)

FIND_PACKAGE(Oracle)
FIND_PACKAGE(Threads)
FIND_PACKAGE(MongoDB)
FIND_PACKAGE(RabbitMQ)
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(Log4cplus REQUIRED)
FIND_PACKAGE(Boost 1.49 COMPONENTS system thread filesystem program_options regex REQUIRED)

SET(SOURCES ${SOURCES}
    main.cpp
    utils.cpp
    server.cpp
    client.cpp
    protocol_base.cpp
)

INCLUDE(omnicomm/CMakeLists.txt)
INCLUDE(backends/CMakeLists.txt)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ORACLE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MongoDB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RABBITMQ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LOG4CPLUS_INCLUDE_DIRS})

SET(CMAKE_CXX_FLAGS "-std=c++0x -O2 -Wall")

CONFIGURE_FILE(cmake/config.h.in ${CMAKE_SOURCE_DIR}/config.h)

ADD_EXECUTABLE(communicator ${SOURCES})

TARGET_LINK_LIBRARIES(communicator 
    ${CMAKE_THREAD_LIBS_INIT}
    ${MongoDB_LIBRARIES}
    ${Boost_LIBRARIES}
    ${PROTOBUF_LIBRARY}
    ${LOG4CPLUS_LIBRARIES}
    ${RABBITMQ_LIBRARIES}
    ${ORACLE_LIBRARIES}
)

SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/bin")
INSTALL(TARGETS communicator DESTINATION .)
INSTALL(FILES log4cplus.config DESTINATION .)
